PyZ3950-2.04/compiler/parser.out
shift/reduce conflict in state 131 resolved as shift.
shift/reduce conflict in state 160 resolved as shift.
shift/reduce conflict in state 161 resolved as shift.
shift/reduce conflict in state 165 resolved as shift.
shift/reduce conflict in state 168 resolved as shift.
shift/reduce conflict in state 173 resolved as shift.
shift/reduce conflict in state 216 resolved as shift.
shift/reduce conflict in state 226 resolved as shift.
shift/reduce conflict in state 229 resolved as shift.
shift/reduce conflict in state 232 resolved as shift.
shift/reduce conflict in state 253 resolved as shift.
shift/reduce conflict in state 256 resolved as shift.
shift/reduce conflict in state 256 resolved as shift.
shift/reduce conflict in state 263 resolved as shift.
shift/reduce conflict in state 285 resolved as shift.
shift/reduce conflict in state 290 resolved as shift.


Unused terminals:


Grammar

Rule 1     module_list -> module_list module_def
Rule 2     module_list -> module_def
Rule 3     module_def -> module_ident DEFINITIONS tag_default GETS BEGIN module_body END
Rule 4     tag_default -> EXPLICIT TAGS
Rule 5     tag_default -> IMPLICIT TAGS
Rule 6     tag_default -> AUTOMATIC TAGS
Rule 7     tag_default -> <empty>
Rule 8     module_ident -> type_ref assigned_ident
Rule 9     assigned_ident -> oid_val
Rule 10    assigned_ident -> <empty>
Rule 11    module_body -> exports imports assign_list
Rule 12    module_body -> <empty>
Rule 13    exports -> EXPORTS syms_exported SEMICOLON
Rule 14    exports -> <empty>
Rule 15    syms_exported -> exp_sym_list
Rule 16    syms_exported -> <empty>
Rule 17    exp_sym_list -> symbol
Rule 18    exp_sym_list -> exp_sym_list COMMA symbol
Rule 19    imports -> IMPORTS syms_imported SEMICOLON
Rule 20    imports -> <empty>
Rule 21    syms_imported -> <empty>
Rule 22    syms_imported -> syms_from_module_list
Rule 23    syms_from_module_list -> syms_from_module_list syms_from_module
Rule 24    syms_from_module_list -> syms_from_module
Rule 25    syms_from_module -> symbol_list FROM module_ident
Rule 26    symbol_list -> symbol_list COMMA symbol
Rule 27    symbol_list -> symbol
Rule 28    symbol -> type_ref
Rule 29    symbol -> identifier
Rule 30    assign_list -> assign_list assign
Rule 31    assign_list -> assign SEMICOLON
Rule 32    assign_list -> assign
Rule 33    assign -> type_assign
Rule 34    assign -> value_assign
Rule 35    assign -> pyquote
Rule 36    pyquote -> PYQUOTE
Rule 37    type_assign -> type_ref GETS type
Rule 38    type -> builtin_type
Rule 39    type -> defined_type
Rule 40    type -> sub_type
Rule 41    ext_type_ref -> type_ref DOT type_ref
Rule 42    defined_type -> ext_type_ref
Rule 43    defined_type -> type_ref
Rule 44    builtin_type -> boolean_type
Rule 45    builtin_type -> integer_type
Rule 46    builtin_type -> bitstring_type
Rule 47    builtin_type -> null_type
Rule 48    builtin_type -> sequence_type
Rule 49    builtin_type -> sequenceof_type
Rule 50    builtin_type -> set_type
Rule 51    builtin_type -> setof_type
Rule 52    builtin_type -> choice_type
Rule 53    builtin_type -> selection_type
Rule 54    builtin_type -> tagged_type
Rule 55    builtin_type -> any_type
Rule 56    builtin_type -> oid_type
Rule 57    builtin_type -> enum_type
Rule 58    builtin_type -> real_type
Rule 59    builtin_type -> char_str_type
Rule 60    builtin_type -> useful_type
Rule 61    builtin_type -> OCTET STRING
Rule 62    named_type -> identifier type
Rule 63    named_type -> type
Rule 64    boolean_type -> BOOLEAN
Rule 65    integer_type -> INTEGER
Rule 66    integer_type -> INTEGER LBRACE named_number_list RBRACE
Rule 67    named_number_list -> named_number_list COMMA named_number
Rule 68    named_number_list -> named_number
Rule 69    named_number -> identifier LPAREN signed_number RPAREN
Rule 70    named_number -> identifier LPAREN defined_value RPAREN
Rule 71    signed_number -> NUMBER
Rule 72    signed_number -> MINUS NUMBER
Rule 73    enum_type -> ENUMERATED LBRACE named_number_list RBRACE
Rule 74    enum_type -> ENUMERATED LBRACE named_number_list COMMA ELLIPSIS RBRACE
Rule 75    real_type -> REAL
Rule 76    bitstring_type -> BIT STRING
Rule 77    bitstring_type -> BIT STRING LBRACE named_bit_list RBRACE
Rule 78    named_bit_list -> named_number_list
Rule 79    null_type -> NULL
Rule 80    sequence_type -> SEQUENCE LBRACE component_type_lists RBRACE
Rule 81    sequence_type -> SEQUENCE LBRACE RBRACE
Rule 82    extension_and_exception -> ELLIPSIS
Rule 83    optional_extension_marker -> COMMA ELLIPSIS
Rule 84    optional_extension_marker -> <empty>
Rule 85    component_type_lists -> element_type_list
Rule 86    component_type_lists -> element_type_list COMMA extension_and_exception extension_additions optional_extension_marker
Rule 87    component_type_lists -> extension_and_exception extension_additions optional_extension_marker
Rule 88    extension_additions -> extension_addition_list
Rule 89    extension_additions -> <empty>
Rule 90    extension_addition_list -> COMMA extension_addition
Rule 91    extension_addition_list -> extension_addition_list COMMA extension_addition
Rule 92    extension_addition -> element_type
Rule 93    element_type_list -> element_type
Rule 94    element_type_list -> element_type_list COMMA element_type
Rule 95    element_type -> named_type
Rule 96    element_type -> named_type OPTIONAL
Rule 97    element_type -> named_type DEFAULT named_value
Rule 98    sequenceof_type -> SEQUENCE OF type
Rule 99    set_type -> SET LBRACE element_type_list RBRACE
Rule 100   setof_type -> SET OF type
Rule 101   choice_type -> CHOICE LBRACE alternative_type_lists RBRACE
Rule 102   alternative_type_lists -> alternative_type_list
Rule 103   alternative_type_lists -> alternative_type_list COMMA extension_and_exception extension_addition_alternatives optional_extension_marker
Rule 104   extension_addition_alternatives -> extension_addition_alternatives_list
Rule 105   extension_addition_alternatives -> <empty>
Rule 106   extension_addition_alternatives_list -> COMMA extension_addition_alternative
Rule 107   extension_addition_alternatives_list -> extension_addition_alternatives_list COMMA extension_addition_alternative
Rule 108   extension_addition_alternative -> named_type
Rule 109   alternative_type_list -> named_type
Rule 110   alternative_type_list -> alternative_type_list COMMA named_type
Rule 111   selection_type -> identifier LT type
Rule 112   tagged_type -> tag type
Rule 113   tagged_type -> tag IMPLICIT type
Rule 114   tagged_type -> tag EXPLICIT type
Rule 115   tag -> LBRACK class class_number RBRACK
Rule 116   class_number -> number
Rule 117   class_number -> defined_value
Rule 118   class -> UNIVERSAL
Rule 119   class -> APPLICATION
Rule 120   class -> PRIVATE
Rule 121   class -> <empty>
Rule 122   any_type -> ANY
Rule 123   any_type -> ANY DEFINED BY identifier
Rule 124   oid_type -> OBJECT_IDENTIFIER
Rule 125   useful_type -> GENERALIZEDTIME
Rule 126   useful_type -> UTCTIME
Rule 127   useful_type -> OBJECTDESCRIPTOR
Rule 128   useful_type -> EXTERNAL
Rule 129   char_str_type -> STRING_T
Rule 130   sub_type -> type subtype_spec
Rule 131   sub_type -> SET size_constraint OF type
Rule 132   sub_type -> SEQUENCE size_constraint OF type
Rule 133   sub_type -> SEQUENCE LPAREN size_constraint RPAREN OF type
Rule 134   subtype_spec -> LPAREN subtype_val_set_list RPAREN
Rule 135   subtype_spec -> LPAREN subtype_val_set_list COMMA ELLIPSIS RPAREN
Rule 136   subtype_val_set_list -> subtype_val_set
Rule 137   subtype_val_set_list -> subtype_val_set_list BAR subtype_val_set
Rule 138   subtype_val_set -> single_value
Rule 139   subtype_val_set -> contained_subtype
Rule 140   subtype_val_set -> value_range
Rule 141   subtype_val_set -> permitted_alphabet
Rule 142   subtype_val_set -> size_constraint
Rule 143   subtype_val_set -> inner_type_constraints
Rule 144   single_value -> value
Rule 145   contained_subtype -> INCLUDES type
Rule 146   value_range -> lower_end_point RANGE upper_end_point
Rule 147   lower_end_point -> lower_end_value
Rule 148   lower_end_point -> lower_end_value LT
Rule 149   upper_end_point -> upper_end_value
Rule 150   upper_end_point -> LT upper_end_value
Rule 151   lower_end_value -> value
Rule 152   lower_end_value -> MIN
Rule 153   upper_end_value -> value
Rule 154   upper_end_value -> MAX
Rule 155   size_constraint -> SIZE subtype_spec
Rule 156   permitted_alphabet -> FROM subtype_spec
Rule 157   inner_type_constraints -> WITH COMPONENT single_type_constraint
Rule 158   inner_type_constraints -> WITH COMPONENTS multiple_type_constraints
Rule 159   single_type_constraint -> subtype_spec
Rule 160   multiple_type_constraints -> full_specification
Rule 161   multiple_type_constraints -> partial_specification
Rule 162   full_specification -> LBRACE type_constraints RBRACE
Rule 163   partial_specification -> LBRACE ELLIPSIS COMMA type_constraints RBRACE
Rule 164   type_constraints -> named_constraint
Rule 165   type_constraints -> type_constraints COMMA named_constraint
Rule 166   named_constraint -> identifier constraint
Rule 167   named_constraint -> constraint
Rule 168   constraint -> value_constraint presence_constraint
Rule 169   value_constraint -> subtype_spec
Rule 170   value_constraint -> <empty>
Rule 171   presence_constraint -> PRESENT
Rule 172   presence_constraint -> ABSENT
Rule 173   presence_constraint -> OPTIONAL
Rule 174   presence_constraint -> <empty>
Rule 175   value_assign -> identifier type GETS value
Rule 176   value -> builtin_value
Rule 177   value -> defined_value
Rule 178   defined_value -> ext_val_ref
Rule 179   defined_value -> identifier
Rule 180   ext_val_ref -> type_ref DOT identifier
Rule 181   builtin_value -> boolean_val
Rule 182   builtin_value -> null_val
Rule 183   builtin_value -> special_real_val
Rule 184   builtin_value -> signed_number
Rule 185   builtin_value -> hex_string
Rule 186   builtin_value -> binary_string
Rule 187   builtin_value -> char_string
Rule 188   boolean_val -> TRUE
Rule 189   boolean_val -> FALSE
Rule 190   special_real_val -> PLUS_INFINITY
Rule 191   special_real_val -> MINUS_INFINITY
Rule 192   null_val -> NULL
Rule 193   named_value -> value
Rule 194   named_value -> identifier value
Rule 195   oid_val -> LBRACE oid_comp_list RBRACE
Rule 196   oid_comp_list -> oid_comp_list oid_component
Rule 197   oid_comp_list -> oid_component
Rule 198   oid_component -> number_form
Rule 199   oid_component -> name_form
Rule 200   oid_component -> name_and_number_form
Rule 201   number_form -> NUMBER
Rule 202   name_form -> type_ref
Rule 203   name_and_number_form -> identifier LPAREN number_form RPAREN
Rule 204   name_and_number_form -> type_ref LPAREN number_form RPAREN
Rule 205   name_and_number_form -> identifier LPAREN defined_value RPAREN
Rule 206   identifier -> LCASE_IDENT
Rule 207   binary_string -> BSTRING
Rule 208   hex_string -> HSTRING
Rule 209   char_string -> QSTRING
Rule 210   number -> NUMBER
Rule 211   type_ref -> UCASE_IDENT

Terminals, with rules where they appear

ABSENT               : 172
ANY                  : 122 123
APPLICATION          : 119
AUTOMATIC            : 6
BAR                  : 137
BEGIN                : 3
BIT                  : 76 77
BOOLEAN              : 64
BSTRING              : 207
BY                   : 123
CHOICE               : 101
COMMA                : 18 26 67 74 83 86 90 91 94 103 106 107 110 135 163 165
COMPONENT            : 157
COMPONENTS           : 158
DEFAULT              : 97
DEFINED              : 123
DEFINITIONS          : 3
DOT                  : 41 180
ELLIPSIS             : 74 82 83 135 163
END                  : 3
ENUMERATED           : 73 74
EXPLICIT             : 4 114
EXPORTS              : 13
EXTERNAL             : 128
FALSE                : 189
FROM                 : 25 156
GENERALIZEDTIME      : 125
GETS                 : 3 37 175
HSTRING              : 208
IMPLICIT             : 5 113
IMPORTS              : 19
INCLUDES             : 145
INTEGER              : 65 66
LBRACE               : 66 73 74 77 80 81 99 101 162 163 195
LBRACK               : 115
LCASE_IDENT          : 206
LPAREN               : 69 70 133 134 135 203 204 205
LT                   : 111 148 150
MAX                  : 154
MIN                  : 152
MINUS                : 72
MINUS_INFINITY       : 191
NULL                 : 79 192
NUMBER               : 71 72 201 210
OBJECTDESCRIPTOR     : 127
OBJECT_IDENTIFIER    : 124
OCTET                : 61
OF                   : 98 100 131 132 133
OPTIONAL             : 96 173
PLUS_INFINITY        : 190
PRESENT              : 171
PRIVATE              : 120
PYQUOTE              : 36
QSTRING              : 209
RANGE                : 146
RBRACE               : 66 73 74 77 80 81 99 101 162 163 195
RBRACK               : 115
REAL                 : 75
RPAREN               : 69 70 133 134 135 203 204 205
SEMICOLON            : 13 19 31
SEQUENCE             : 80 81 98 132 133
SET                  : 99 100 131
SIZE                 : 155
STRING               : 61 76 77
STRING_T             : 129
TAGS                 : 4 5 6
TRUE                 : 188
UCASE_IDENT          : 211
UNIVERSAL            : 118
UTCTIME              : 126
WITH                 : 157 158
error                : 

Nonterminals, with rules where they appear

alternative_type_list : 102 103 110
alternative_type_lists : 101
any_type             : 55
assign               : 30 31 32
assign_list          : 11 30
assigned_ident       : 8
binary_string        : 186
bitstring_type       : 46
boolean_type         : 44
boolean_val          : 181
builtin_type         : 38
builtin_value        : 176
char_str_type        : 59
char_string          : 187
choice_type          : 52
class                : 115
class_number         : 115
component_type_lists : 80
constraint           : 166 167
contained_subtype    : 139
defined_type         : 39
defined_value        : 70 117 177 205
element_type         : 92 93 94
element_type_list    : 85 86 94 99
enum_type            : 57
exp_sym_list         : 15 18
exports              : 11
ext_type_ref         : 42
ext_val_ref          : 178
extension_addition   : 90 91
extension_addition_alternative : 106 107
extension_addition_alternatives : 103
extension_addition_alternatives_list : 104 107
extension_addition_list : 88 91
extension_additions  : 86 87
extension_and_exception : 86 87 103
full_specification   : 160
hex_string           : 185
identifier           : 29 62 69 70 111 123 166 175 179 180 194 203 205
imports              : 11
inner_type_constraints : 143
integer_type         : 45
lower_end_point      : 146
lower_end_value      : 147 148
module_body          : 3
module_def           : 1 2
module_ident         : 3 25
module_list          : 1 0
multiple_type_constraints : 158
name_and_number_form : 200
name_form            : 199
named_bit_list       : 77
named_constraint     : 164 165
named_number         : 67 68
named_number_list    : 66 67 73 74 78
named_type           : 95 96 97 108 109 110
named_value          : 97
null_type            : 47
null_val             : 182
number               : 116
number_form          : 198 203 204
oid_comp_list        : 195 196
oid_component        : 196 197
oid_type             : 56
oid_val              : 9
optional_extension_marker : 86 87 103
partial_specification : 161
permitted_alphabet   : 141
presence_constraint  : 168
pyquote              : 35
real_type            : 58
selection_type       : 53
sequence_type        : 48
sequenceof_type      : 49
set_type             : 50
setof_type           : 51
signed_number        : 69 184
single_type_constraint : 157
single_value         : 138
size_constraint      : 131 132 133 142
special_real_val     : 183
sub_type             : 40
subtype_spec         : 130 155 156 159 169
subtype_val_set      : 136 137
subtype_val_set_list : 134 135 137
symbol               : 17 18 26 27
symbol_list          : 25 26
syms_exported        : 13
syms_from_module     : 23 24
syms_from_module_list : 22 23
syms_imported        : 19
tag                  : 112 113 114
tag_default          : 3
tagged_type          : 54
type                 : 37 62 63 98 100 111 112 113 114 130 131 132 133 145 175
type_assign          : 33
type_constraints     : 162 163 165
type_ref             : 8 28 37 41 41 43 180 202 204
upper_end_point      : 146
upper_end_value      : 149 150
useful_type          : 60
value                : 144 151 153 175 193 194
value_assign         : 34
value_constraint     : 168
value_range          : 140


Parsing method: SLR


state 0

    (0) S' -> . module_list
    (1) module_list -> . module_list module_def
    (2) module_list -> . module_def
    (3) module_def -> . module_ident DEFINITIONS tag_default GETS BEGIN module_body END
    (8) module_ident -> . type_ref assigned_ident
    (211) type_ref -> . UCASE_IDENT

    UCASE_IDENT     shift and go to state 4


    module_list     shift and go to state 1
    module_def      shift and go to state 5
    module_ident    shift and go to state 2
    type_ref        shift and go to state 3

state 1

    (0) S' -> module_list .
    (1) module_list -> module_list . module_def
    (3) module_def -> . module_ident DEFINITIONS tag_default GETS BEGIN module_body END
    (8) module_ident -> . type_ref assigned_ident
    (211) type_ref -> . UCASE_IDENT

    UCASE_IDENT     shift and go to state 4


    module_def      shift and go to state 6
    module_ident    shift and go to state 2
    type_ref        shift and go to state 3

state 2

    (3) module_def -> module_ident . DEFINITIONS tag_default GETS BEGIN module_body END

    DEFINITIONS     shift and go to state 7



state 3

    (8) module_ident -> type_ref . assigned_ident
    (9) assigned_ident -> . oid_val
    (10) assigned_ident -> .
    (195) oid_val -> . LBRACE oid_comp_list RBRACE

    DEFINITIONS     reduce using rule 10 (assigned_ident -> .)
    SEMICOLON       reduce using rule 10 (assigned_ident -> .)
    UCASE_IDENT     reduce using rule 10 (assigned_ident -> .)
    LCASE_IDENT     reduce using rule 10 (assigned_ident -> .)
    LBRACE          shift and go to state 9


    assigned_ident  shift and go to state 10
    oid_val         shift and go to state 8

state 4

    (211) type_ref -> UCASE_IDENT .

    LBRACE          reduce using rule 211 (type_ref -> UCASE_IDENT .)
    DEFINITIONS     reduce using rule 211 (type_ref -> UCASE_IDENT .)
    SEMICOLON       reduce using rule 211 (type_ref -> UCASE_IDENT .)
    COMMA           reduce using rule 211 (type_ref -> UCASE_IDENT .)
    FROM            reduce using rule 211 (type_ref -> UCASE_IDENT .)
    GETS            reduce using rule 211 (type_ref -> UCASE_IDENT .)
    DOT             reduce using rule 211 (type_ref -> UCASE_IDENT .)
    END             reduce using rule 211 (type_ref -> UCASE_IDENT .)
    UCASE_IDENT     reduce using rule 211 (type_ref -> UCASE_IDENT .)
    LCASE_IDENT     reduce using rule 211 (type_ref -> UCASE_IDENT .)
    PYQUOTE         reduce using rule 211 (type_ref -> UCASE_IDENT .)
    RBRACE          reduce using rule 211 (type_ref -> UCASE_IDENT .)
    NUMBER          reduce using rule 211 (type_ref -> UCASE_IDENT .)
    LPAREN          reduce using rule 211 (type_ref -> UCASE_IDENT .)
    RPAREN          reduce using rule 211 (type_ref -> UCASE_IDENT .)
    BAR             reduce using rule 211 (type_ref -> UCASE_IDENT .)
    OPTIONAL        reduce using rule 211 (type_ref -> UCASE_IDENT .)
    DEFAULT         reduce using rule 211 (type_ref -> UCASE_IDENT .)



state 5

    (2) module_list -> module_def .

    $               reduce using rule 2 (module_list -> module_def .)
    UCASE_IDENT     reduce using rule 2 (module_list -> module_def .)



state 6

    (1) module_list -> module_list module_def .

    $               reduce using rule 1 (module_list -> module_list module_def .)
    UCASE_IDENT     reduce using rule 1 (module_list -> module_list module_def .)



state 7

    (3) module_def -> module_ident DEFINITIONS . tag_default GETS BEGIN module_body END
    (4) tag_default -> . EXPLICIT TAGS
    (5) tag_default -> . IMPLICIT TAGS
    (6) tag_default -> . AUTOMATIC TAGS
    (7) tag_default -> .

    EXPLICIT        shift and go to state 12
    IMPLICIT        shift and go to state 14
    AUTOMATIC       shift and go to state 13
    GETS            reduce using rule 7 (tag_default -> .)


    tag_default     shift and go to state 11

state 8

    (9) assigned_ident -> oid_val .

    DEFINITIONS     reduce using rule 9 (assigned_ident -> oid_val .)
    SEMICOLON       reduce using rule 9 (assigned_ident -> oid_val .)
    UCASE_IDENT     reduce using rule 9 (assigned_ident -> oid_val .)
    LCASE_IDENT     reduce using rule 9 (assigned_ident -> oid_val .)



state 9

    (195) oid_val -> LBRACE . oid_comp_list RBRACE
    (196) oid_comp_list -> . oid_comp_list oid_component
    (197) oid_comp_list -> . oid_component
    (198) oid_component -> . number_form
    (199) oid_component -> . name_form
    (200) oid_component -> . name_and_number_form
    (201) number_form -> . NUMBER
    (202) name_form -> . type_ref
    (203) name_and_number_form -> . identifier LPAREN number_form RPAREN
    (204) name_and_number_form -> . type_ref LPAREN number_form RPAREN
    (205) name_and_number_form -> . identifier LPAREN defined_value RPAREN
    (211) type_ref -> . UCASE_IDENT
    (206) identifier -> . LCASE_IDENT

    NUMBER          shift and go to state 18
    UCASE_IDENT     shift and go to state 4
    LCASE_IDENT     shift and go to state 17


    oid_comp_list   shift and go to state 21
    identifier      shift and go to state 22
    name_and_number_form shift and go to state 16
    number_form     shift and go to state 23
    oid_component   shift and go to state 15
    type_ref        shift and go to state 19
    name_form       shift and go to state 20

state 10

    (8) module_ident -> type_ref assigned_ident .

    DEFINITIONS     reduce using rule 8 (module_ident -> type_ref assigned_ident .)
    SEMICOLON       reduce using rule 8 (module_ident -> type_ref assigned_ident .)
    UCASE_IDENT     reduce using rule 8 (module_ident -> type_ref assigned_ident .)
    LCASE_IDENT     reduce using rule 8 (module_ident -> type_ref assigned_ident .)



state 11

    (3) module_def -> module_ident DEFINITIONS tag_default . GETS BEGIN module_body END

    GETS            shift and go to state 24



state 12

    (4) tag_default -> EXPLICIT . TAGS

    TAGS            shift and go to state 25



state 13

    (6) tag_default -> AUTOMATIC . TAGS

    TAGS            shift and go to state 26



state 14

    (5) tag_default -> IMPLICIT . TAGS

    TAGS            shift and go to state 27



state 15

    (197) oid_comp_list -> oid_component .

    RBRACE          reduce using rule 197 (oid_comp_list -> oid_component .)
    NUMBER          reduce using rule 197 (oid_comp_list -> oid_component .)
    UCASE_IDENT     reduce using rule 197 (oid_comp_list -> oid_component .)
    LCASE_IDENT     reduce using rule 197 (oid_comp_list -> oid_component .)



state 16

    (200) oid_component -> name_and_number_form .

    RBRACE          reduce using rule 200 (oid_component -> name_and_number_form .)
    NUMBER          reduce using rule 200 (oid_component -> name_and_number_form .)
    UCASE_IDENT     reduce using rule 200 (oid_component -> name_and_number_form .)
    LCASE_IDENT     reduce using rule 200 (oid_component -> name_and_number_form .)



state 17

    (206) identifier -> LCASE_IDENT .

    SEMICOLON       reduce using rule 206 (identifier -> LCASE_IDENT .)
    COMMA           reduce using rule 206 (identifier -> LCASE_IDENT .)
    FROM            reduce using rule 206 (identifier -> LCASE_IDENT .)
    INTEGER         reduce using rule 206 (identifier -> LCASE_IDENT .)
    SEQUENCE        reduce using rule 206 (identifier -> LCASE_IDENT .)
    OBJECT_IDENTIFIER reduce using rule 206 (identifier -> LCASE_IDENT .)
    REAL            reduce using rule 206 (identifier -> LCASE_IDENT .)
    OCTET           reduce using rule 206 (identifier -> LCASE_IDENT .)
    BOOLEAN         reduce using rule 206 (identifier -> LCASE_IDENT .)
    BIT             reduce using rule 206 (identifier -> LCASE_IDENT .)
    NULL            reduce using rule 206 (identifier -> LCASE_IDENT .)
    SET             reduce using rule 206 (identifier -> LCASE_IDENT .)
    CHOICE          reduce using rule 206 (identifier -> LCASE_IDENT .)
    LCASE_IDENT     reduce using rule 206 (identifier -> LCASE_IDENT .)
    LBRACK          reduce using rule 206 (identifier -> LCASE_IDENT .)
    ANY             reduce using rule 206 (identifier -> LCASE_IDENT .)
    ENUMERATED      reduce using rule 206 (identifier -> LCASE_IDENT .)
    STRING_T        reduce using rule 206 (identifier -> LCASE_IDENT .)
    GENERALIZEDTIME reduce using rule 206 (identifier -> LCASE_IDENT .)
    UTCTIME         reduce using rule 206 (identifier -> LCASE_IDENT .)
    OBJECTDESCRIPTOR reduce using rule 206 (identifier -> LCASE_IDENT .)
    EXTERNAL        reduce using rule 206 (identifier -> LCASE_IDENT .)
    UCASE_IDENT     reduce using rule 206 (identifier -> LCASE_IDENT .)
    LPAREN          reduce using rule 206 (identifier -> LCASE_IDENT .)
    LT              reduce using rule 206 (identifier -> LCASE_IDENT .)
    END             reduce using rule 206 (identifier -> LCASE_IDENT .)
    PYQUOTE         reduce using rule 206 (identifier -> LCASE_IDENT .)
    PRESENT         reduce using rule 206 (identifier -> LCASE_IDENT .)
    ABSENT          reduce using rule 206 (identifier -> LCASE_IDENT .)
    OPTIONAL        reduce using rule 206 (identifier -> LCASE_IDENT .)
    RBRACE          reduce using rule 206 (identifier -> LCASE_IDENT .)
    RPAREN          reduce using rule 206 (identifier -> LCASE_IDENT .)
    RBRACK          reduce using rule 206 (identifier -> LCASE_IDENT .)
    BAR             reduce using rule 206 (identifier -> LCASE_IDENT .)
    RANGE           reduce using rule 206 (identifier -> LCASE_IDENT .)
    PLUS_INFINITY   reduce using rule 206 (identifier -> LCASE_IDENT .)
    MINUS_INFINITY  reduce using rule 206 (identifier -> LCASE_IDENT .)
    HSTRING         reduce using rule 206 (identifier -> LCASE_IDENT .)
    QSTRING         reduce using rule 206 (identifier -> LCASE_IDENT .)
    TRUE            reduce using rule 206 (identifier -> LCASE_IDENT .)
    FALSE           reduce using rule 206 (identifier -> LCASE_IDENT .)
    NUMBER          reduce using rule 206 (identifier -> LCASE_IDENT .)
    MINUS           reduce using rule 206 (identifier -> LCASE_IDENT .)
    BSTRING         reduce using rule 206 (identifier -> LCASE_IDENT .)
    GETS            reduce using rule 206 (identifier -> LCASE_IDENT .)
    DEFAULT         reduce using rule 206 (identifier -> LCASE_IDENT .)



state 18

    (201) number_form -> NUMBER .

    RBRACE          reduce using rule 201 (number_form -> NUMBER .)
    NUMBER          reduce using rule 201 (number_form -> NUMBER .)
    UCASE_IDENT     reduce using rule 201 (number_form -> NUMBER .)
    LCASE_IDENT     reduce using rule 201 (number_form -> NUMBER .)
    RPAREN          reduce using rule 201 (number_form -> NUMBER .)



state 19

    (202) name_form -> type_ref .
    (204) name_and_number_form -> type_ref . LPAREN number_form RPAREN

    RBRACE          reduce using rule 202 (name_form -> type_ref .)
    NUMBER          reduce using rule 202 (name_form -> type_ref .)
    UCASE_IDENT     reduce using rule 202 (name_form -> type_ref .)
    LCASE_IDENT     reduce using rule 202 (name_form -> type_ref .)
    LPAREN          shift and go to state 28



state 20

    (199) oid_component -> name_form .

    RBRACE          reduce using rule 199 (oid_component -> name_form .)
    NUMBER          reduce using rule 199 (oid_component -> name_form .)
    UCASE_IDENT     reduce using rule 199 (oid_component -> name_form .)
    LCASE_IDENT     reduce using rule 199 (oid_component -> name_form .)



state 21

    (195) oid_val -> LBRACE oid_comp_list . RBRACE
    (196) oid_comp_list -> oid_comp_list . oid_component
    (198) oid_component -> . number_form
    (199) oid_component -> . name_form
    (200) oid_component -> . name_and_number_form
    (201) number_form -> . NUMBER
    (202) name_form -> . type_ref
    (203) name_and_number_form -> . identifier LPAREN number_form RPAREN
    (204) name_and_number_form -> . type_ref LPAREN number_form RPAREN
    (205) name_and_number_form -> . identifier LPAREN defined_value RPAREN
    (211) type_ref -> . UCASE_IDENT
    (206) identifier -> . LCASE_IDENT

    RBRACE          shift and go to state 29
    NUMBER          shift and go to state 18
    UCASE_IDENT     shift and go to state 4
    LCASE_IDENT     shift and go to state 17


    identifier      shift and go to state 22
    name_and_number_form shift and go to state 16
    number_form     shift and go to state 23
    oid_component   shift and go to state 30
    type_ref        shift and go to state 19
    name_form       shift and go to state 20

state 22

    (203) name_and_number_form -> identifier . LPAREN number_form RPAREN
    (205) name_and_number_form -> identifier . LPAREN defined_value RPAREN

    LPAREN          shift and go to state 31

  ! LPAREN          [ shift and go to state 31 ]


state 23

    (198) oid_component -> number_form .

    RBRACE          reduce using rule 198 (oid_component -> number_form .)
    NUMBER          reduce using rule 198 (oid_component -> number_form .)
    UCASE_IDENT     reduce using rule 198 (oid_component -> number_form .)
    LCASE_IDENT     reduce using rule 198 (oid_component -> number_form .)



state 24

    (3) module_def -> module_ident DEFINITIONS tag_default GETS . BEGIN module_body END

    BEGIN           shift and go to state 32



state 25

    (4) tag_default -> EXPLICIT TAGS .

    GETS            reduce using rule 4 (tag_default -> EXPLICIT TAGS .)



state 26

    (6) tag_default -> AUTOMATIC TAGS .

    GETS            reduce using rule 6 (tag_default -> AUTOMATIC TAGS .)



state 27

    (5) tag_default -> IMPLICIT TAGS .

    GETS            reduce using rule 5 (tag_default -> IMPLICIT TAGS .)



state 28

    (204) name_and_number_form -> type_ref LPAREN . number_form RPAREN
    (201) number_form -> . NUMBER

    NUMBER          shift and go to state 18


    number_form     shift and go to state 33

state 29

    (195) oid_val -> LBRACE oid_comp_list RBRACE .

    DEFINITIONS     reduce using rule 195 (oid_val -> LBRACE oid_comp_list RBRACE .)
    SEMICOLON       reduce using rule 195 (oid_val -> LBRACE oid_comp_list RBRACE .)
    UCASE_IDENT     reduce using rule 195 (oid_val -> LBRACE oid_comp_list RBRACE .)
    LCASE_IDENT     reduce using rule 195 (oid_val -> LBRACE oid_comp_list RBRACE .)



state 30

    (196) oid_comp_list -> oid_comp_list oid_component .

    RBRACE          reduce using rule 196 (oid_comp_list -> oid_comp_list oid_component .)
    NUMBER          reduce using rule 196 (oid_comp_list -> oid_comp_list oid_component .)
    UCASE_IDENT     reduce using rule 196 (oid_comp_list -> oid_comp_list oid_component .)
    LCASE_IDENT     reduce using rule 196 (oid_comp_list -> oid_comp_list oid_component .)



state 31

    (203) name_and_number_form -> identifier LPAREN . number_form RPAREN
    (205) name_and_number_form -> identifier LPAREN . defined_value RPAREN
    (201) number_form -> . NUMBER
    (178) defined_value -> . ext_val_ref
    (179) defined_value -> . identifier
    (180) ext_val_ref -> . type_ref DOT identifier
    (206) identifier -> . LCASE_IDENT
    (211) type_ref -> . UCASE_IDENT

    NUMBER          shift and go to state 18
    LCASE_IDENT     shift and go to state 17
    UCASE_IDENT     shift and go to state 4


    defined_value   shift and go to state 34
    ext_val_ref     shift and go to state 37
    identifier      shift and go to state 38
    type_ref        shift and go to state 35
    number_form     shift and go to state 36

state 32

    (3) module_def -> module_ident DEFINITIONS tag_default GETS BEGIN . module_body END
    (11) module_body -> . exports imports assign_list
    (12) module_body -> .
    (13) exports -> . EXPORTS syms_exported SEMICOLON
    (14) exports -> .

    END             reduce using rule 12 (module_body -> .)
    EXPORTS         shift and go to state 40
    IMPORTS         reduce using rule 14 (exports -> .)
    UCASE_IDENT     reduce using rule 14 (exports -> .)
    LCASE_IDENT     reduce using rule 14 (exports -> .)
    PYQUOTE         reduce using rule 14 (exports -> .)


    exports         shift and go to state 39
    module_body     shift and go to state 41

state 33

    (204) name_and_number_form -> type_ref LPAREN number_form . RPAREN

    RPAREN          shift and go to state 42



state 34

    (205) name_and_number_form -> identifier LPAREN defined_value . RPAREN

    RPAREN          shift and go to state 43



state 35

    (180) ext_val_ref -> type_ref . DOT identifier

    DOT             shift and go to state 44



state 36

    (203) name_and_number_form -> identifier LPAREN number_form . RPAREN

    RPAREN          shift and go to state 45



state 37

    (178) defined_value -> ext_val_ref .
